--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-  "name": "sira-creds",
-  "version": "0.1.0",
-  "main": "index.js",
-  "description": "Sira credentials module to support third party account linking",
-  "homepage": "https://github.com/taoyuan/sira-creds",
-  "bugs": "https://github.com/taoyuan/sira-creds/issues",
-  "author": {
-    "name": "Tao Yuan",
-    "email": "torworx@gmail.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/taoyuan/sira-creds"
-  },
-  "licenses": [
-    {
-      "type": "MIT"
+    "name": "sira-creds",
+    "version": "0.1.0",
+    "main": "index.js",
+    "description": "Sira credentials module to support third party account linking",
+    "homepage": "https://github.com/taoyuan/sira-creds",
+    "bugs": "https://github.com/taoyuan/sira-creds/issues",
+    "author": {
+        "name": "Tao Yuan",
+        "email": "torworx@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/taoyuan/sira-creds"
+    },
+    "licenses": [
+        {
+            "type": "MIT"
+        }
+    ],
+    "keywords": [
+        "sira-creds",
+        "sira",
+        "user",
+        "credentials"
+    ],
+    "dependencies": {
+        "passport": "~0.2.0",
+        "underscore": "^1.6.0",
+        "async": "^0.9.0"
+    },
+    "devDependencies": {
+        "async": "^0.9.0",
+        "chai": "*",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-mocha-test": "~0.11.0",
+        "jshint-stylish": "^0.4.0",
+        "load-grunt-tasks": "^0.6.0",
+        "mocha": "^1.21.4",
+        "sira": "^0.1.3",
+        "sira-core": "^0.1.0",
+        "time-grunt": "~1.0.0",
+        "jugglingdb": "^0.2.14",
+        "jugglingdb-redis-hq": "latest"
+    },
+    "scripts": {
+        "test": "grunt"
     }
-  ],
-  "keywords": [
-    "sira-creds",
-    "sira",
-    "user",
-    "credentials"
-  ],
-  "devDependencies": {
-    "async": "^0.9.0",
-    "chai": "*",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "~0.11.0",
-    "jshint-stylish": "^0.4.0",
-    "load-grunt-tasks": "^0.6.0",
-    "mocha": "^1.21.4",
-    "sira": "^0.1.3",
-    "sira-core": "^0.1.0",
-    "time-grunt": "~1.0.0"
-  },
-  "scripts": {
-    "test": "grunt"
-  }
 }
